import { describe, expect, it } from "vitest";
import { z } from "zod";
import { defineContract, emitMarkdown, toSchema } from "../src/index.js";
import { kitchenSinkContract, sampleContract } from "./fixtures.js";

function emit(contract: Parameters<typeof toSchema>[0], opts?: Parameters<typeof emitMarkdown>[1]): string {
  const files = emitMarkdown(toSchema(contract), opts);
  expect(files.map((f) => f.path)).toEqual(["contract.md"]);
  return files[0]!.content;
}

describe("emitMarkdown", () => {
  it("sample contract", () => {
    expect(emit(sampleContract)).toMatchSnapshot();
  });

  it("kitchen sink contract", () => {
    expect(emit(kitchenSinkContract, { title: "Kitchen", basePath: "/api" })).toMatchSnapshot();
  });

  it("starts with the auto-generated marker so `pnpm gen` can replace it", () => {
    const md = emit(sampleContract);
    expect(md.startsWith("<!-- <auto-generated>")).toBe(true);
    expect(md).toContain("DO NOT EDIT");
  });

  it("documents each method with every route and the DTO / TS type names", () => {
    const md = emit(sampleContract);
    expect(md).toContain("| [`parts.search`](#partssearch) | `PartsSearchRequest` | `PartsSearchResponse` |");
    expect(md).toContain("### parts.search");
    expect(md).toContain("| HTTP | `POST /parts/search` |");
    expect(md).toContain("`client.parts.search(input)`。型は `PartsSearchInput` / `PartsSearchOutput`");
    expect(md).toContain("`IPartsApi.Search(req As PartsSearchRequest) As Task(Of PartsSearchResponse)`");
    expect(md).toContain("| `keyword` | string（1 文字以上） | 必須 |  |");
    expect(md).toContain("| `limit` | integer | 任意 |  |");
    expect(md).toContain("| `items` | [Part](#part)[] | 必須 |  |");
  });

  it("documents events, shared types and enums", () => {
    const md = emit(kitchenSinkContract);
    expect(md).toContain("### event.customerChanged");
    expect(md).toContain('`client.events.on("customerChanged", (payload) => ...)`');
    expect(md).toContain("`BridgeEvents.CustomerChanged(payload As CustomerChangedEvent)`");
    expect(md).toContain("### Status");
    expect(md).toContain('文字列の列挙: `"open"` / `"in-progress"` / `"closed"` / `"2nd"`');
    expect(md).toContain("| `status` | [Status](#status) | 必須 |");
    expect(md).toContain('| `kind` | `"a"` / `"b"` | 必須 |');
  });

  it("flattens anonymous nested objects by path and marks nullable / optional / record / unknown", () => {
    const md = emit(kitchenSinkContract);
    expect(md).toContain("| `children` | object[] | 必須 |");
    expect(md).toContain("| `children[].childId` | string | 必須 |");
    expect(md).toContain("| `children[].weight` | number | 任意 |");
    expect(md).toContain("| `meta` | object | 任意 |");
    expect(md).toContain("| `meta.createdBy` | string | 必須 |");
    expect(md).toContain("| `zip` | string \\| null | 必須 |");
    expect(md).toContain("| `optionalNullableInt` | integer \\| null | 任意 |");
    expect(md).toContain("| `attributes` | Record<string, string> | 必須 |");
    expect(md).toContain("| `extra` | any | 必須 |");
    expect(md).toContain("| `date` | string | 必須 | VB 予約語の回避を確認する |");
  });

  it("refers to a shared type used directly as input instead of repeating its fields", () => {
    const Query = z.object({ q: z.string() }).meta({ id: "Query" });
    const contract = defineContract({
      methods: { items: { find: { input: Query, output: z.object({ n: z.number().int().min(0).max(100) }) } } },
      events: {},
    });
    const md = emit(contract, { eventsPath: false });
    expect(md).toContain("**入力** [`Query`](#query)（共有型）");
    expect(md).toContain("`IItemsApi.Find(req As Query) As Task(Of ItemsFindResponse)`");
    expect(md).toContain("| `n` | integer（0 以上、100 以下） | 必須 |");
    expect(md).toContain("（イベントなし）");
  });
});
