// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitMarkdown > kitchen sink contract 1`] = `
"<!-- <auto-generated>
     This document was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
</auto-generated> -->
# Kitchen

zod で書いた契約（\`contract.ts\`）から生成した仕様書。画面（TypeScript）の型と VB.NET の DTO / Interface は同じ契約から生成されるので、この文書と実装は常に一致する。

- 呼び出しは JSON-RPC 2.0（WebView2 の postMessage）。\`method\` は \`<namespace>.<name>\`、Host → Web の通知は \`event.<name>\`
- HTTP で提供する場合は \`POST /<namespace>/<name>\`（body = 入力、200 の body = 出力。JSON-RPC の封筒は付けない）。詳細は \`openapi.json\`
- 日付は ISO 8601 の文字列で往復する
- 「任意」の項目は省略できる（JSON に含めない）。\`null\` を許す項目は型に \`| null\` と書く

## メソッド一覧

| メソッド | 入力 | 出力 | 説明 |
|---|---|---|---|
| [\`customers.list\`](#customerslist) | \`CustomersListRequest\` | \`CustomersListResponse\` | 顧客一覧を取得する |
| [\`customers.save\`](#customerssave) | \`CustomersSaveRequest\` | \`CustomersSaveResponse\` |  |
| [\`system.ping\`](#systemping) | \`SystemPingRequest\` | \`SystemPingResponse\` |  |

## customers

VB.NET の実装 Interface は \`ICustomersApi\`。

### customers.list

顧客一覧を取得する

| 経路 | 呼び出し方 |
|---|---|
| JSON-RPC | \`"method": "customers.list"\`、\`params\` = 入力、\`result\` = 出力 |
| HTTP | \`POST /api/customers/list\` |
| TypeScript | \`client.customers.list(input)\`。型は \`CustomersListInput\` / \`CustomersListOutput\` |
| VB.NET | \`ICustomersApi.List(req As CustomersListRequest) As Task(Of CustomersListResponse)\` |

**入力** \`CustomersListRequest\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`page\` | integer | 任意 |  |

**出力** \`CustomersListResponse\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`items\` | [Customer](#customer)[] | 必須 |  |
| \`total\` | integer | 必須 |  |

### customers.save

| 経路 | 呼び出し方 |
|---|---|
| JSON-RPC | \`"method": "customers.save"\`、\`params\` = 入力、\`result\` = 出力 |
| HTTP | \`POST /api/customers/save\` |
| TypeScript | \`client.customers.save(input)\`。型は \`CustomersSaveInput\` / \`CustomersSaveOutput\` |
| VB.NET | \`ICustomersApi.Save(req As CustomersSaveRequest) As Task(Of CustomersSaveResponse)\` |

**入力** \`CustomersSaveRequest\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`customer\` | [Customer](#customer) | 必須 |  |

**出力** \`CustomersSaveResponse\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`ok\` | boolean | 必須 |  |

## system

VB.NET の実装 Interface は \`ISystemApi\`。

### system.ping

| 経路 | 呼び出し方 |
|---|---|
| JSON-RPC | \`"method": "system.ping"\`、\`params\` = 入力、\`result\` = 出力 |
| HTTP | \`POST /api/system/ping\` |
| TypeScript | \`client.system.ping(input)\`。型は \`SystemPingInput\` / \`SystemPingOutput\` |
| VB.NET | \`ISystemApi.Ping(req As SystemPingRequest) As Task(Of SystemPingResponse)\` |

**入力** \`SystemPingRequest\`

（項目なし）

**出力** \`SystemPingResponse\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`time\` | string | 必須 |  |

## イベント（Host → Web）

進捗表示などの補助的な通知。取りこぼしうる前提で使い、業務の正しさをイベントに依存させない。VB.NET からは \`BridgeEvents\` で発行する。

### event.customerChanged

| 経路 | 発行 / 購読 |
|---|---|
| JSON-RPC | 通知 \`{ "method": "event.customerChanged", "params": <ペイロード> }\`（id なし） |
| HTTP | \`GET /api/events\`（Server-Sent Events）の \`data:\` 行 |
| TypeScript | \`client.events.on("customerChanged", (payload) => ...)\`。型は \`CustomerChangedEvent\` |
| VB.NET | \`BridgeEvents.CustomerChanged(payload As CustomerChangedEvent)\` |

**ペイロード** \`CustomerChangedEvent\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`id\` | integer | 必須 |  |
| \`status\` | [Status](#status) | 必須 |  |

### event.log

| 経路 | 発行 / 購読 |
|---|---|
| JSON-RPC | 通知 \`{ "method": "event.log", "params": <ペイロード> }\`（id なし） |
| HTTP | \`GET /api/events\`（Server-Sent Events）の \`data:\` 行 |
| TypeScript | \`client.events.on("log", (payload) => ...)\`。型は \`LogEvent\` |
| VB.NET | \`BridgeEvents.Log(payload As LogEvent)\` |

**ペイロード** \`LogEvent\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`level\` | \`"info"\` / \`"warn"\` | 必須 |  |
| \`text\` | string | 必須 |  |

## 共有型（\`.meta({ id })\`）

複数の場所から参照される型。名前は TypeScript の型名、VB.NET のクラス名と同じ。

### Customer

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`id\` | integer | 必須 |  |
| \`name\` | string | 必須 |  |
| \`status\` | [Status](#status) | 必須 |  |
| \`address\` | [Address](#address) | 任意 |  |
| \`tags\` | string[] | 必須 |  |
| \`scores\` | number[] | 任意 |  |
| \`attributes\` | Record<string, string> | 必須 |  |
| \`extra\` | any | 必須 |  |
| \`date\` | string | 必須 | VB 予約語の回避を確認する |
| \`end\` | boolean | 任意 |  |
| \`snake_case_name\` | string | 必須 |  |
| \`nullableInt\` | integer \\| null | 必須 |  |
| \`optionalNullableInt\` | integer \\| null | 任意 |  |
| \`kind\` | \`"a"\` / \`"b"\` | 必須 |  |
| \`children\` | object[] | 必須 |  |
| \`children[].childId\` | string | 必須 |  |
| \`children[].weight\` | number | 任意 |  |
| \`meta\` | object | 任意 |  |
| \`meta.createdBy\` | string | 必須 |  |

### Status

文字列の列挙: \`"open"\` / \`"in-progress"\` / \`"closed"\` / \`"2nd"\`

VB.NET では \`String\` のまま往復し、\`Status\` クラスの \`Public Const\` に各値を持つ。

### Address

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`line1\` | string | 必須 |  |
| \`line2\` | string | 任意 |  |
| \`zip\` | string \\| null | 必須 |  |

## エラー

失敗の応答は JSON-RPC の \`error\` オブジェクト \`{ code, message, data }\`。HTTP では同じオブジェクトを body に載せ、右の状態コードを返す。

| code | 意味 | HTTP | いつ起きるか |
|---|---|---|---|
| -32700 | Parse error | 400 | 要求が JSON として読めない |
| -32600 | Invalid Request | 400 | JSON-RPC の封筒の形が不正（\`method\` が無い等） |
| -32601 | Method not found | 404 | 契約に無いメソッド |
| -32602 | Invalid params | 400 | 入力が契約に合わない。VB.NET 側でデシリアライズに失敗したか、必須・文字数・範囲・列挙の検証に通らなかった（\`data\` に項目ごとの理由） |
| -32603 | Internal error | 500 | transport 層の失敗（応答待ちのタイムアウト、切断、HTTP の不正な応答） |
| -32000 | Server error | 500 | VB.NET 実装の未処理例外。\`message\` は例外メッセージ、\`data\` は例外型名。実装が \`JsonRpcException(code, message, data)\` を投げれば -32000 以下の任意のコードを返せる |

画面側は送信前に入力を zod で検証し、合わなければ送らずに \`BridgeValidationError\`（\`direction: "input"\`）にする。受信した出力とイベントも検証する（\`"output"\` / \`"event"\`）。

## 型の対応

| 契約（zod） | JSON Schema | TypeScript | VB.NET |
|---|---|---|---|
| \`z.string()\` | string | \`string\` | \`String\` |
| \`z.number()\` | number | \`number\` | \`Double\` |
| \`z.number().int()\` | integer | \`number\` | \`Integer\`（\`format: int64\` なら \`Long\`） |
| \`z.boolean()\` | boolean | \`boolean\` | \`Boolean\` |
| \`z.array(T)\` | array | \`T[]\` | \`List(Of T)\` |
| \`z.record(z.string(), T)\` | object + additionalProperties | \`Record<string, T>\` | \`Dictionary(Of String, T)\` |
| \`z.object({...})\` | object | オブジェクト型 | 生成クラス（無名なら \`<親><項目>\`） |
| \`z.enum([...])\` | string + enum | 文字列リテラルの union | \`String\`（値の定数を持つクラス） |
| \`.optional()\` | \`required\` に含めない | \`?:\` | 省略時は \`Nothing\`（値型は \`Nullable(Of T)\`） |
| \`.nullable()\` | \`type: [T, "null"]\` | \`T \\| null\` | \`Nothing\` 可（値型は \`Nullable(Of T)\`） |
| \`z.unknown()\` | {} | \`unknown\` | \`JToken\` |
| \`z.string().describe(...)\` | description | doc コメント | XML doc コメント |

\`z.union\` / \`z.intersection\` / \`z.date\` / \`bigint\` は契約に使えない（生成時にエラーで止まる）。日付は ISO 8601 文字列。
"
`;

exports[`emitMarkdown > sample contract 1`] = `
"<!-- <auto-generated>
     This document was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
</auto-generated> -->
# 契約仕様

zod で書いた契約（\`contract.ts\`）から生成した仕様書。画面（TypeScript）の型と VB.NET の DTO / Interface は同じ契約から生成されるので、この文書と実装は常に一致する。

- 呼び出しは JSON-RPC 2.0（WebView2 の postMessage）。\`method\` は \`<namespace>.<name>\`、Host → Web の通知は \`event.<name>\`
- HTTP で提供する場合は \`POST /<namespace>/<name>\`（body = 入力、200 の body = 出力。JSON-RPC の封筒は付けない）。詳細は \`openapi.json\`
- 日付は ISO 8601 の文字列で往復する
- 「任意」の項目は省略できる（JSON に含めない）。\`null\` を許す項目は型に \`| null\` と書く

## メソッド一覧

| メソッド | 入力 | 出力 | 説明 |
|---|---|---|---|
| [\`parts.search\`](#partssearch) | \`PartsSearchRequest\` | \`PartsSearchResponse\` |  |

## parts

VB.NET の実装 Interface は \`IPartsApi\`。

### parts.search

| 経路 | 呼び出し方 |
|---|---|
| JSON-RPC | \`"method": "parts.search"\`、\`params\` = 入力、\`result\` = 出力 |
| HTTP | \`POST /parts/search\` |
| TypeScript | \`client.parts.search(input)\`。型は \`PartsSearchInput\` / \`PartsSearchOutput\` |
| VB.NET | \`IPartsApi.Search(req As PartsSearchRequest) As Task(Of PartsSearchResponse)\` |

**入力** \`PartsSearchRequest\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`keyword\` | string（1 文字以上） | 必須 |  |
| \`limit\` | integer | 任意 |  |

**出力** \`PartsSearchResponse\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`items\` | [Part](#part)[] | 必須 |  |

## イベント（Host → Web）

進捗表示などの補助的な通知。取りこぼしうる前提で使い、業務の正しさをイベントに依存させない。VB.NET からは \`BridgeEvents\` で発行する。

### event.progress

| 経路 | 発行 / 購読 |
|---|---|
| JSON-RPC | 通知 \`{ "method": "event.progress", "params": <ペイロード> }\`（id なし） |
| HTTP | \`GET /events\`（Server-Sent Events）の \`data:\` 行 |
| TypeScript | \`client.events.on("progress", (payload) => ...)\`。型は \`ProgressEvent\` |
| VB.NET | \`BridgeEvents.Progress(payload As ProgressEvent)\` |

**ペイロード** \`ProgressEvent\`

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`percent\` | number | 必須 |  |
| \`message\` | string | 任意 |  |

## 共有型（\`.meta({ id })\`）

複数の場所から参照される型。名前は TypeScript の型名、VB.NET のクラス名と同じ。

### Part

| 項目 | 型 | 必須 | 説明 |
|---|---|---|---|
| \`partNo\` | string | 必須 |  |
| \`name\` | string | 必須 |  |
| \`qty\` | integer | 必須 |  |
| \`updatedAt\` | string | 必須 | ISO 8601 |

## エラー

失敗の応答は JSON-RPC の \`error\` オブジェクト \`{ code, message, data }\`。HTTP では同じオブジェクトを body に載せ、右の状態コードを返す。

| code | 意味 | HTTP | いつ起きるか |
|---|---|---|---|
| -32700 | Parse error | 400 | 要求が JSON として読めない |
| -32600 | Invalid Request | 400 | JSON-RPC の封筒の形が不正（\`method\` が無い等） |
| -32601 | Method not found | 404 | 契約に無いメソッド |
| -32602 | Invalid params | 400 | 入力が契約に合わない。VB.NET 側でデシリアライズに失敗したか、必須・文字数・範囲・列挙の検証に通らなかった（\`data\` に項目ごとの理由） |
| -32603 | Internal error | 500 | transport 層の失敗（応答待ちのタイムアウト、切断、HTTP の不正な応答） |
| -32000 | Server error | 500 | VB.NET 実装の未処理例外。\`message\` は例外メッセージ、\`data\` は例外型名。実装が \`JsonRpcException(code, message, data)\` を投げれば -32000 以下の任意のコードを返せる |

画面側は送信前に入力を zod で検証し、合わなければ送らずに \`BridgeValidationError\`（\`direction: "input"\`）にする。受信した出力とイベントも検証する（\`"output"\` / \`"event"\`）。

## 型の対応

| 契約（zod） | JSON Schema | TypeScript | VB.NET |
|---|---|---|---|
| \`z.string()\` | string | \`string\` | \`String\` |
| \`z.number()\` | number | \`number\` | \`Double\` |
| \`z.number().int()\` | integer | \`number\` | \`Integer\`（\`format: int64\` なら \`Long\`） |
| \`z.boolean()\` | boolean | \`boolean\` | \`Boolean\` |
| \`z.array(T)\` | array | \`T[]\` | \`List(Of T)\` |
| \`z.record(z.string(), T)\` | object + additionalProperties | \`Record<string, T>\` | \`Dictionary(Of String, T)\` |
| \`z.object({...})\` | object | オブジェクト型 | 生成クラス（無名なら \`<親><項目>\`） |
| \`z.enum([...])\` | string + enum | 文字列リテラルの union | \`String\`（値の定数を持つクラス） |
| \`.optional()\` | \`required\` に含めない | \`?:\` | 省略時は \`Nothing\`（値型は \`Nullable(Of T)\`） |
| \`.nullable()\` | \`type: [T, "null"]\` | \`T \\| null\` | \`Nothing\` 可（値型は \`Nullable(Of T)\`） |
| \`z.unknown()\` | {} | \`unknown\` | \`JToken\` |
| \`z.string().describe(...)\` | description | doc コメント | XML doc コメント |

\`z.union\` / \`z.intersection\` / \`z.date\` / \`bigint\` は契約に使えない（生成時にエラーで止まる）。日付は ISO 8601 文字列。
"
`;
